Fix CSS z-index bug to make entire product card clickable instead of just title

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -914,6 +914,7 @@
 
 
 
+@media screen and (max-width: 749px) {
   /* Match Nobero Grid and Spacing */
   ul#product-grid, .grid--2-col-tablet-down {
     column-gap: 2px !important;
@@ -925,11 +926,11 @@
     border-radius: 0 !important;
     overflow: hidden;
   }
+  
   .card__inner {
     border-radius: 0 !important;
-    position: relative !important;
-    z-index: 3 !important;
   }
+  
   .card__information {
     padding: 8px 8px 8px !important;
   }
@@ -959,9 +960,5 @@
   .fit11-price-discount {
     font-size: 11px !important;
     color: #008C2D !important;
-  }
-  
-  .fit-card-sizes-overlay {
-    display: none !important;
   }
 }
